# My_First_Project

./: CMakeLists.txt  Makefile  README.md
Platform/stm32f446re/: main.c
Platform/stm32f446re/linker/: linker.ld
Platform/stm32f446re/startup/: startup_stm32f446re.s
